Ultra Sonic Class init added

--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -200,6 +200,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="UltraSonic.cs" />
     <Compile Include="UsrCtrlAxis2D.cs">
       <SubType>UserControl</SubType>
     </Compile>
