small logo icon added

--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -280,6 +280,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="RobotClass.cd" />
+    <Content Include="favicon.ico" />
     <Content Include="Models\chassis.tvm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
