--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -113,6 +113,8 @@
     <Reference Include="Microsoft.DirectX, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.DirectX.Direct3D, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    <Reference Include="Microsoft.DirectX.Direct3DX, Version=1.0.2911.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="Microsoft.DirectX.DirectInput, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <Private>True</Private>
     </Reference>
@@ -202,6 +204,9 @@
     </Compile>
     <Compile Include="UltraSonic.cs" />
     <Compile Include="UsrCtrlAxis2D.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UsrCtrlAxis3D.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Utility.cs" />
@@ -449,6 +454,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UsrCtrlAxis2D.resx">
       <DependentUpon>UsrCtrlAxis2D.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UsrCtrlAxis3D.resx">
+      <DependentUpon>UsrCtrlAxis3D.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Content Include="Resources\AForge.dll">
