--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -460,7 +460,7 @@
       <DependentUpon>UsrCtrlAxis3D.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Content Include="Resources\2_Sound Effect - Submarine sonar.mp3" />
+    <Content Include="Resources\sonar.mp3" />
     <Content Include="Resources\AForge.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
