--- a/MEMS_Accelerometer/Accelerometer01/Accelerometer01.csproj
+++ b/MEMS_Accelerometer/Accelerometer01/Accelerometer01.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MEMSGraph.cs" />
     <Compile Include="UsrCtrlAxis2D.cs">
       <SubType>UserControl</SubType>
     </Compile>
