trajectory equation description

--- a/MEMS_Accelerometer_SVN2/AccelerometerSVN2.csproj
+++ b/MEMS_Accelerometer_SVN2/AccelerometerSVN2.csproj
@@ -155,6 +155,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="equations.txt" />
     <Content Include="Resources\ZedGraph.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
