--- a/web_control_svn2/web.config
+++ b/web_control_svn2/web.config
@@ -108,4 +108,9 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+
+  <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
+
 </configuration>
