--- a/Android/trunk/FastPunch/.classpath
+++ b/Android/trunk/FastPunch/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="M:/PORTABLE_APPS/Eclipse_Portable_clasic/Data/workspaceAndroidTut2/GraphView/bin/graphview.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
